kubernetes/apps/base/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: n8n
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: revenz/n8n
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /media
              name: n8n-media
            - mountPath: /temp
              name: n8n-temp
            - mountPath: /app/Data
              name: n8n-data
            - mountPath: /app/Logs
              name: n8n-logs
            - mountPath: /app/common
              name: n8n-common
      restartPolicy: Always
      volumes:
        - name: n8n-media
          persistentVolumeClaim:
            claimName: media
        - name: n8n-common
          persistentVolumeClaim:
            claimName: n8n-common
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
        - name: n8n-logs
          persistentVolumeClaim:
            claimName: n8n-logs
        - name: n8n-temp
          emptyDir:
            sizeLimit: 100Gi
