kubernetes/apps/base/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: media
spec:
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 19200
      targetPort: 5000
