kubernetes/apps/base/n8n/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`n8n.${cluster_domain}`)
      kind: Rule
      services:
        - name: n8n
          port: 19200
